# Flashshot_x64

./: .gitignore  CMakeLists.txt  COPYING.LGPL  LICENSE  NOTICE  PRIVACY.md  Qt与Cmake支持.md  README.md  环境信息.md
src/: ConfigManager.cpp  ConfigManager.h  HotkeyManager.cpp  HotkeyManager.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  NotificationManager.cpp  NotificationManager.h  ReplayBuffer.cpp  ReplayBuffer.h  ScreenshotTask.cpp  ScreenshotTask.h  SetupWizard.cpp  SetupWizard.h  main.cpp  resources.rc
